# gitfs

./: .drone.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  Vagrantfile  conversations.html  coverage.xml  debug_fuse_operations.py  debug_readdir.py  debug_readdir_simple.py  dev_requirements.txt  gitfs_fuse3.sh  install_fuse3.sh  pyproject.toml  requirements.txt  setup.py  test_fuse3.sh  test_fuse_library.py  test_gitfs_debug.py  test_gitfs_full.py  test_gitfs_minimal.py  test_minimal_mount.py  test_requirements.txt
.claude/agents/: fuse-filesystem-expert.md  python-fuse-automation-expert.md
.claude/commands/: README.md  refactor-legacy-code.md  refactor-to-python3.md  upgrade-dependencies.md  validate-refactoring.md
.github/workflows/: ci.yml
docs/: _index.md
gitfs/: __init__.py  __main__.py  fuse_compat.py  lfs.py  log.py  mounter.py  repository.py  router.py  routes.py
gitfs/cache/: __init__.py  base.py  commits.py  gitignore.py  lru.py  node.py
gitfs/cache/decorators/: lru.py
gitfs/merges/: accept_mine.py  base.py
gitfs/utils/: __init__.py  args.py  commits.py  strptime.py
gitfs/utils/decorators/: not_in.py  retry.py  while_not.py  write_operation.py
gitfs/views/: __init__.py  commit.py  current.py  history.py  index.py  passthrough.py  read_only.py  view.py
gitfs/worker/: __init__.py  commit_queue.py  fetch.py  peasant.py  sync.py
script/: cleanup  provision  test  testenv
test_venv/: pyvenv.cfg
tests/: test_lfs.py  test_mount.py  test_router.py
tests/cache/: test_base.py  test_commits.py  test_gitignore.py  test_lru.py  test_node.py
tests/integrations/: base.py  conftest.py  read_only_filesystem.py
tests/integrations/commit/: test_read.py  test_write.py
tests/integrations/current/: test_read.py  test_write.py
tests/integrations/history/: test_read.py  test_write.py
tests/integrations/index/: test_write.py
tests/integrations/repository/: test_repository.py
tests/mergers/: test_accept_mine.py  test_base.py
tests/repository/: base.py  test_repository.py
tests/utils/: test_args.py  test_commit_list.py  test_decorators.py  test_not_in.py  test_path_utils.py  test_strptime.py
tests/views/: test_commit.py  test_current.py  test_history.py  test_index.py  test_passthrough.py  test_read_only.py  test_view.py
tests/workers/: test_fetch.py  test_peasant.py  test_queue.py  test_sync.py
